# scraping-api-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build-master-and-publish-to-dockerhub.yaml
kubernetes/: scraping-api-backend-service.yaml  scraping-api-backend.yaml  scraping-api-ingress.yaml
src/: agent.rs  api.rs  http.rs  main.rs  model.rs
